blog/terraform/all/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    purpose: blog
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        imagePullPolicy: Always
        image: "eu.gcr.io/terraformar/unoterr1/blog_comp:$IMAGE"
        ports:
          - containerPort: 3000
