blog/terraform/all/service_blog.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
   - protocol: TCP
     port: 80
     targetPort: 3000
  type: NodePort
