blog/terraform/all/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
      http:
        paths:
          - path: /
            backend:
              service:
                name: app
                port:
                  number: 80
